Fix bug where navigation owerflows logo on smaller screen

--- a/index.css
+++ b/index.css
@@ -297,12 +297,12 @@ select {
 }
 
 .primary-navigation {
+    --gap: clamp(1.5rem, 5vw, 3.5rem);;
     --underline-gap: 2rem;
     list-style: none;
     padding: 0;
     margin: 0;
     background: hsl( var(--clr-dark) / .95);
-    /* backdrop-filter: blur(1.5rem); */
 }
 
 /* add support for different browsers */
